* Fix #78 - converted module to gettext
* Fix #49 - fixed bug in paragraph-modifier
* Fix #65 - missed translation
* Fix #24/#60 - module not showing in admin-panel
* Fix #53/#61/#72 - removed SimplePie and backend errors
* Fix #85 - Replaced lightboxXL and greybox with Lightwindow
* Fix #77 - Page title gets sanitized twice
* Removed Circavie.com plugin
* Added more classes to each contenttype

Version 3.0.0
-------------
* Added versioning with complete version history
* Added check for BBCode in text plugin
* Added plugin overview in configuration
* Added 1 column layout without header area
* Added Circavie.com plugin
* Works with Scribite 3.x
* Hiding translation links to avoid translating from language X to X
* Added module selector to module content plugin
* Add #40 - Added max. no. of items for RSS plugins
* Add #5  - Display page language
* Add #37 - Add link to admin settings
* Fix #18 - Drop history table when module deleted
* Fix #42 - menu block must ignore "invisible" pages

UPGRADE INSTRUCTIONS:
  Make sure current language is the same language as your content items are
  written in. During upgrade all content items will be associated with the
  current language (all translations are kept intact).


Version 2.1.0
-------------
* Now possible to collapse the page tree while editing
* Now possible to collapse the page tree while editing
* Added left/right positioning af content elements
* Added CSS styling of content elements through classes defined by admin
* Now using dropdown for content type selection
* Now possible to select HTML editor in Scribite (still defaults to FCKEditor)
* Added: menu block caching
* Added: improved youtube display
* Added: check for multilinguality setting (Translation functions won't be displayed if site is set to only one language)
* Added: [#13171] pagesetter publist plugin
* Added: [#15546] In "Content Menu Block" add a Class descriptor


Version 2.0.1
-------------