@@ -1,0 +1,21 @@
+<!--[pnformsetinitialfocus inputId='url']-->
+<div class="z-formrow">
+    <!--[pnformlabel for='url' __text='URL to the video clip']-->
+    <!--[pnformurlinput id='url' group='data']-->
+    <!--[contentlabelhelp __text='Something like "http://vimeo.com/7504225".".']-->
+</div>
+
+<div class="z-formrow">
+    <!--[pnformlabel for='text' __text='Video description']-->
+    <!--[pnformtextinput id='text' textMode='multiline' cols='40' rows='10' group='data']-->
+</div>
+
+<div class="z-formrow">
+    <div class="z-formnote">
+        <!--[pnformradiobutton id='displayModeInline' dataField='displayMode' value='inline' checked='1' group='data']-->
+        <!--[pnformlabel for='displayModeInline' __text='Show video inline']-->
+
+        <!--[pnformradiobutton id='displayModePopup' dataField='displayMode' value='popup' group='data']-->
+        <!--[pnformlabel for='displayModePopup' __text='Show video in popup window']-->
+    </div>
+</div>
