@@ -1,0 +1,9 @@
+<div class="z-formrow">
+    <label><!--[gt text='URL to the video clip']--></label>
+    <span><!--[$data.url]--></span>
+</div>
+
+<div class="z-formrow">
+    <label><!--[gt text='Video description']--></label>
+    <span><!--[$data.text]--></span>
+</div>
