@@ -1,7 +1,9 @@
 <!--[if $displayMode=='inline']-->
-<dl class="content-youtube">
+<dl class="content-video content-youtube">
     <dt>
-        <object type="application/x-shockwave-flash" style="width:320px; height:267px" data="http://www.youtube.com/v/<!--[$videoId]-->"><param name="movie" value="http://www.youtube.com/v/<!--[$videoId]-->" /></object>
+        <object type="application/x-shockwave-flash" style="width:320px; height:267px" data="http://www.youtube.com/v/<!--[$videoId]-->">
+            <param name="movie" value="http://www.youtube.com/v/<!--[$videoId]-->" />
+        </object>
     </dt>
     <dd><!--[$text]-->&nbsp;|&nbsp;<a href="http://www.youtube.com/v/<!--[$videoId]-->&amp;rel=1">youtube.com</a></dd>
 </dl>
@@ -12,7 +14,7 @@
 <!--[assign var="image" value=http://i.ytimg.com/vi/`$videoId`/default.jpg]-->
 <!--[assign var="imageSize" value=$image|getimagesize]-->
 
-<dl class="content-youtube" style="width:<!--[$imageSize[0]]-->px;">
+<dl class="content-video content-youtube" style="width:<!--[$imageSize[0]]-->px;">
     <dt>
         <a title="<!--[$text]-->" href="http://www.youtube.com/v/<!--[$videoId]-->&amp;autoplay=1" class="lightwindow page-options" params="lightwindow_width=425,lightwindow_height=340,lightwindow_loading_animation=false"><img src="http://i.ytimg.com/vi/<!--[$videoId]-->/default.jpg" alt="<!--[$text]-->" /></a>
     </dt>
